# MLOps

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py
MLOps/: dataset.py  infer.py  model.py  train.py
infer_result/: results.csv
mlops/: __init__.py  dataset.py  get_device.py  infer.py  trainer.py
