[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["SAFUANlip <iusupov.se@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13.0"
torch = "^2.1.0"
pytest = "^7.4.2"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
torchvision = "^0.16.0"
pandas = "^2.1.1"
pre-commit = "^3.4.0"
isort = "^5.12.0"
black = "^23.9.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
