[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["SAFUANlip <iusupov.se@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13.0"
torch = "^2.1.0"
pytest = "^7.4.2"
tqdm = "^4.66.1"
opencv-python = "^4.8.1.78"
torchvision = "^0.16.0"
pandas = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
